--- a/index.html
+++ b/index.html
@@ -3,8 +3,12 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <title>Evalium — Coming Soon</title>
-    <meta name="description" content="Create, assign, and analyze employee evaluations." />
+    <title>Evalium — Domain Reserved</title>
+    <meta
+      name="description"
+      content="Evalium is a private software project in active development. This domain is reserved while core engineering work continues."
+    />
+    <meta name="robots" content="noindex,nofollow" />
     <style>
       :root {
         --brand:#4f46e5; --bg:#0b1020; --text:#dbe4ff; --muted:#94a3b8;
@@ -25,38 +29,23 @@
       }
       h1 { margin:0 0 .5rem; font-size: clamp(1.8rem, 3vw, 2.5rem); letter-spacing:.2px }
       p.lead { margin:.25rem 0 1rem; color: var(--muted) }
-      form { display:flex; gap:.5rem; margin-top:1rem }
-      input[type="email"] {
-        flex:1; min-width: 220px; padding:.75rem .9rem; border-radius:10px; border:1px solid #233055;
-        background:#0f172a; color:#e5e7eb; outline:none;
-      }
-      input[type="email"]::placeholder { color:#6b7280 }
-      button {
-        padding:.78rem 1rem; border-radius:10px; border:1px solid color-mix(in srgb, var(--brand) 60%, #ffffff 0%);
-        background: color-mix(in srgb, var(--brand) 85%, #000 15%); color:white; font-weight:600; cursor:pointer;
-      }
       .meta { margin-top:.9rem; font-size:.85rem; color:#9aa6c1 }
       .logo { display:inline-flex; gap:.6rem; align-items:center; margin-bottom:.75rem }
       .dot { width:.9rem; height:.9rem; border-radius:50%; background:var(--brand); box-shadow:0 0 20px var(--brand) }
-      @media (max-width: 520px){ form{flex-direction:column} button{width:100%} }
     </style>
   </head>
   <body>
     <main class="card" role="main" aria-labelledby="title">
       <div class="logo" aria-hidden="true"><span class="dot"></span><strong>Evalium</strong></div>
-      <h1 id="title">A better way to run employee evaluations</h1>
-      <p class="lead">Create, assign, and analyse assessments — with clean UX and thoughtful automation. We’re polishing the first release.</p>
 
-      <!-- Formspree integration -->
-      <form
-        action="https://formspree.io/f/xeoljjbr"
-        method="POST"
-      >
-        <input type="email" name="email" placeholder="you@company.com" autocomplete="email" required />
-        <button type="submit">Join the waitlist</button>
-      </form>
+      <h1 id="title">Domain reserved</h1>
+      <p class="lead">
+        Evalium is a private software project in active development. This domain is reserved while core engineering work continues.
+      </p>
 
-      <p class="meta">No spam. We’ll email you only when something meaningful ships.</p>
+      <p class="meta">
+        This page is intentionally minimal and is not a public product announcement.
+      </p>
     </main>
   </body>
 </html>
