--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Evalium — Domain Reserved</title>
     <meta
       name="description"
-      content="Evalium is a private software project in active development. This domain is reserved while core engineering work continues."
+      content="Evalium is a software project in active development. This domain is reserved while core engineering work continues."
     />
     <meta name="robots" content="noindex,nofollow" />
     <style>
