--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
       <h1 id="title">Domain reserved</h1>
       <p class="lead">
-        Evalium is a private software project in active development. This domain is reserved while core engineering work continues.
+        Evalium is a software project in active development. This domain is reserved while core engineering work continues.
       </p>
 
       <p class="meta">
